--- a/.editorconfig
+++ b/.editorconfig
@@ -2,10 +2,17 @@ root = true
 
 [*]
 charset = utf-8
-indent_style = space
 end_of_line = lf
+indent_size = 2
+indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
+
+[*.html]
+indent_style = tab
+end_of_line = lf
+trim_trailing_whitespace = true
+insert_final_newline = true
 
 [*.latte]
 indent_style = tab
@@ -19,10 +26,8 @@ end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.yml]
-charset = utf-8
+[*.php]
+indent_style = tab
 end_of_line = lf
-indent_size = 2
-indent_style = space
-insert_final_newline = true
 trim_trailing_whitespace = true
+insert_final_newline = true
