--- a/.editorconfig
+++ b/.editorconfig
@@ -10,24 +10,28 @@ trim_trailing_whitespace = true
 
 [*.html]
 indent_style = tab
+indent_size = tab
 end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = true
 
 [*.latte]
 indent_style = tab
+indent_size = tab
 end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = true
 
 [*.neon]
 indent_style = tab
+indent_size = tab
 end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = true
 
 [*.php]
 indent_style = tab
+indent_size = tab
 end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = true
