--- a/.editorconfig
+++ b/.editorconfig
@@ -35,3 +35,10 @@ indent_size = tab
 end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[*.xml]
+indent_style = tab
+indent_size = tab
+end_of_line = lf
+trim_trailing_whitespace = true
+insert_final_newline = true
