--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,11 @@ Thumbs.db
 # Files that might appear on external disks
 .Spotlight-V100
 .Trashes
+
+# IDE
+.idea
+.vscode
+
+# Temporary files
+temp
+tmp
